--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     font-style: normal;
     background-color: #E6E20F;
     padding: 20px;
-    height: 100vh;
+    height: 100dvh;
     display: flex;
     flex-direction: column;
     align-items: end;
